--- a/conf/docker/docker-compose.yml
+++ b/conf/docker/docker-compose.yml
@@ -10,13 +10,15 @@ services:
     ports:
       - 9092:9092
       - 9093:9093
+      - 9094:9094
     environment:
       # Settings required for KRaft mode
       KAFKA_NODE_ID: 1
       KAFKA_PROCESS_ROLES: broker,controller
       # Configure listeners for both docker and host communication
-      KAFKA_LISTENERS: HOST://:9092, CONTROLLER://:9093
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: CONTROLLER:PLAINTEXT, HOST:PLAINTEXT
+      KAFKA_LISTENERS: HOST://:9092, CONTROLLER://:9093, SSL://:9094, SASL_PLAINTEXT://:9095
+      KAFKA_ADVERTISED_LISTENERS: HOST://:9092, CONTROLLER://:9093, SSL://:9094, SASL_PLAINTEXT://:9095
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: HOST:PLAINTEXT, CONTROLLER:PLAINTEXT, SSL:SSL, SASL_PLAINTEXT:SASL_PLAINTEXT
       # Listener to use for broker-to-broker communication
       KAFKA_INTER_BROKER_LISTENER_NAME: HOST
       # Listener to use for controller-to-broker communication
@@ -24,6 +26,22 @@ services:
       KAFKA_CONTROLLER_QUORUM_VOTERS: 1@kafka-broker:9093
       # Setting replication factor, this number must same with node amount.
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      # SASL configuration
+      KAFKA_SASL_MECHANISM_INTER_BROKER_PROTOCOL: PLAIN
+      KAFKA_SASL_ENABLED_MECHANISMS: PLAIN
+      KAFKA_OPTS: "-Djava.security.auth.login.config=/etc/kafka/configs/kafka-server-jass.conf"
+      # SSL configuration
+      KAFKA_SECURITY_PROTOCOL: SSL
+      KAFKA_SSL_KEYSTORE_FILENAME: kafka.server.keystore.jks
+      KAFKA_SSL_KEYSTORE_CREDENTIALS: cert_creds
+      KAFKA_SSL_KEY_CREDENTIALS: cert_creds
+      KAFKA_SSL_TRUSTSTORE_FILENAME: kafka.server.truststore.jks
+      KAFKA_SSL_TRUSTSTORE_CREDENTIALS: cert_creds
+      KAFKA_SSL_CLIENT_AUTH: 'required'
+      KAFKA_SSL_ENDPOINT_IDENTIFICATION_ALGORITHM:
+    volumes:
+      - ${CACHE_DIR}/certs:/etc/kafka/secrets
+      - ${APP_DIR}/security/kafka-server-jass.conf:/etc/kafka/configs/kafka-server-jass.conf
     networks:
       - kafka-net
     working_dir: /opt/kafka/bin
@@ -32,6 +50,9 @@ services:
     build:
       context: kafka
     container_name: docker-kafka-client_${PROJECT_NAME}
+    volumes:
+      - ${APP_DIR}/security:/app
+      - ${CACHE_DIR}/certs:/certs
     networks:
       - kafka-net
     working_dir: /opt/kafka/bin
